Styles/__MediaQueries.scss
@media only screen and (min-width: 2060px){
    body{
        font-size: 20px;
    }

    .descriptionHeader{
        .contactInfoHolder{
            height: 100vh;

            .contactInfo{
                width: 45%;
                height: auto;
                background: $fourthColor;
                padding: 5em 5em 2.5em 5em;
                top: 0;
                right: 50%;
                margin-right: -25%; 
                position: absolute;
                box-shadow: 1px 1px 10px $tertiaryColor;
    
                .infoHeader{
    
                    .portfolioPic{
                        height: 40%;
                        width:40%;
                    }
                }
            }
        }
    }
    
    footer{
        .contactInfoHolder{
            .contactInfo{
                font-size: 1.5em;
            }
        }
    }
}

@media only screen and (max-width: 1200px){
    .descriptionBody{
        .descriptionContent{
            flex-direction: column;
            align-content: space-between;
            position: relative;
            
            img{
                width: 100%;
                position: absolute;
                opacity: 0.4;
                object-fit: none;
                object-position: bottom left;
            }
    
            .descriptionBlock{
                height: 100%;
                margin: unset;
                background-color: rgba(142, 111, 101, .95);

                h2{
                    margin-left: unset;
                    text-align: center;
                    width: 200%;
                    background: #FBFBFB;
                    padding: 1em 0;
                }
                
                p{
                    width: 100%;
                    color: #ffffff;
                }
    
                p:nth-child(2){
                    margin-left: unset; 
                }
    
                p:nth-child(3){
                    margin-left: unset;
                }
    
                p:nth-child(4){
                    margin-left: unset;
                }
                
                i{
                    text-align: initial;
                }
    
            }
        }
    }
}

@media only screen and (max-width: 1024px){
    body{
        font-size: 15px;
    }

    h2{
        font-size: 3em !important;
    }

    .landingPage{
        header{
            .navBar{
                ul{
                    flex-direction: row;
                    text-align: left;
                }
            }
        }
        .landingImage{
            background-image: url("../Assets/LongerLandingPage-min.jpg");
        }
    }

    .contactBackground{
        .contactForm{
            width: 100%;
        }
    }
}

@media only screen and (max-width: 830px){
    .landingPage{
        header{
            #menu-icon {
                display:block;
                position: absolute;
                width: 60px;
                height: 60px;
                top: 1em;
                left: 1em;
            }

            .navBar{
                height: 100%;
                width: 0;
                position: fixed;
                z-index: 4;
                top: 0;
                background-color: rgba(0,0,0, 0.9);
                transition: 1s;
                overflow-x: hidden;
                margin-top: 0;
                
                a{
                    padding: 1rem 2rem;
                    text-decoration: none;
                    color: #818181;
                    display: block;
                }

                ul{
                    height: 100%;
                    display:flex;
                    align-content: center;
                    justify-content: center;
                    flex-wrap: wrap;
                    flex-direction: column;
                    text-align: center;

                    a{
                        font-size: 1.5em;
                    }
                }
                
                .closeButton{
                    display: block;
                    font-size: 5em;
                    position: absolute;
                    right: 5%;
                }
            }
        }
    }

    .descriptionHeader{
        .contactInfoHolder{
            height:840px;
            .contactInfo{
                width: 80%;
                right: 20%;
                margin-right: -10%;
            }
    
            .backgroundImg{
                width: 100%;
                background-position: bottom center;
                background-size: contain;
            }
        }
    }

    .descriptionBody{
        .descriptionContent{
            .descriptionBlock{
                width: 100%;
                background: rgba(142, 111, 101, .75);
                h2{
                    width: 100%;
                }
                
                p{
                    color: #ffffff;
                    background: rgba(0, 0, 0, 0.3);
                }
            }
            
            img{
                object-position:center center;
            }
        }
    }
}

@media only screen and (max-width: 480px){
    body{
        font-size: 12px;
    }

    .landingImage{
        .overView{
            h2{
                letter-spacing: 0em;
                text-transform: uppercase;
                font-weight: bolder;
                font-size: 1em;
            }

            span{
                font-size: 2em;
                font-style: italic;
            }
        }
    }

    .descriptionHeader{
        .contactInfoHolder{
            height: unset;
            min-height: 100%;
            .contactInfo{
                all:unset;
                
                position: relative;
                height: 100%;
                width: 100%;
                background: $fourthColor;
                padding: 1em;
                margin: 2em 0;
                box-shadow: 1px 1px 10px $tertiaryColor;

                .infoHeader{ 
                    .portfolioPic{
                        height: 200px;
                        width: 200px;
                    }
                }
            }
    
            .backgroundImg{
                display:none;
            }
        }
    }

    .contactBackground{

        .contactForm{
            grid-template-columns: 30% auto auto ;
        }
    }
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active){
    /* IE10+ CSS styles go here */
    .landingPage{
        .landingImage{
            background-attachment: local;
        }

        nav {
            li {
                a{
                    text-shadow: 1px 0 black, 0 .6px black, .6px 0 black, 0 -.6px black;
                }
            }
        }
    }
    .descriptionBody{
        min-height: 80vh;
        .descriptionContent{
            .descriptionBlock{
                img{
                    background-attachment: local;
                }
            }
        }
    }

    .contactBackground{
        max-height: 100vh;
        width: 100%;
        margin: auto;
        position: relative;
        padding: 0 0 2em;
    
        .contactForm{
            display: flex;
            flex-direction: column;
            flex-wrap: nowrap;
            width: 60%;
            margin: auto;
    
            h2{
                width: auto;
                font-size: 2em;
                color: #999;
            }
    
            label{
                width: auto;
                padding: 1em 0 1em 0;
                margin: 0;
               
            }
    
            #firstName, #lastName, #email, #number,#submit, #message{
                flex-grow: 1;
                width: auto;
                margin: 0;
                padding: 1em;
            }

            #message{
                height: 10em;
            }
        }
    }

    footer{
        height: 30vh;
        background-color: #333;
        color: #fff;
        overflow: hidden;
        position: relative;
    
        .contactInfoHolder{
            padding: 2em;
            margin: auto;
            width: 60%;
            display: table;
        
            .contactInfo{
                display: table-cell;
                vertical-align: middle;
                list-style: none;
                line-height: 2em;
    
                a{
                    color: #fff;
                }
            }
        }
    }
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active), (max-width: 1200px){
    .contactBackground{
        .contactForm{
            width: 100%;
        }
    }

    .descriptionBody{
        .descriptionContent{
            .descriptionBlock{
                margin: auto 0px;

                h2, p:nth-child(2), p:nth-child(3), p:nth-child(4){
                    margin-left: 0
                }
            }
        }
    }
}

@supports (-webkit-text-size-adjust:none) and (not (-ms-ime-align:auto))
and (not (-moz-appearance:none)){
    .landingPage{
        .landingImage{
            background-attachment: local;
        }

        nav {
            li {
                a{
                    text-shadow: 1px 0 black, 0 .6px black, .6px 0 black, 0 -.6px black;
                }
            }
        }
    }

    .descriptionBody{
        min-height: 80vh;
        .descriptionContent{
            height: 100%;
            .descriptionBlock{
                height: 100%;
                margin: unset;
                background: rgba(142, 111, 101, .95);

                img{
                    background-attachment: local;
                    background-position: bottom;
                }
            }
        }
    }

    .contactBackground{
        max-height: 100vh;
        width: 100%;
        margin: auto;
        position: relative;
        padding: 0 0 2em;
    
        .contactForm{
            display: flex;
            flex-direction: column;
            flex-wrap: nowrap;
            width: 60%;
            margin: auto;
    
            h2{
                width: auto;
                font-size: 2em;
                color: #999;
            }
    
            label{
                width: auto;
                padding: 1em 0 1em 0;
                margin: 0;
               
            }
    
            #firstName, #lastName, #email, #number,#submit, #message{
                flex-grow: 1;
                width: auto;
                margin: 0;
                padding: 1em;
            }

            #message{
                height: 10em;
            }
        }
    }
}

